# sharpeye15

./: .gitignore  README.txt
dependencies/: libarte_1.0.2_x86_64.deb  libpiccolo_1.0.17_x86_64.deb  libpiccolo_1.0.18_x86_64.deb
mapWebApp/: README  bootstrap.css  build.sbt  index.html  index.html.save  mapWebApp-2.11-fastopt.html  mapWebApp-2.11-fastopt.html~  mapWebApp-2.11-opt.html
mapWebApp/js/: jquery.flightindicators.min.js
mapWebApp/project/: plugins.sbt
mapWebApp/src/main/resources/: application.conf  application.conf~
sharpeye15_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
sharpeye15_ws/devel/include/seagull_autopilot_msgs/: AutopilotADCSamples.h  AutopilotCommand.h  AutopilotGimbalPayload.h  AutopilotMissionLimits.h  AutopilotMissionSettings.h  AutopilotPayload.h  AutopilotRequestWaypoints.h  AutopilotStatus.h  AutopilotTelemetry.h  AutopilotTrack.h  AutopilotUserAction.h  AutopilotWPList.h  AutopilotWarning.h  AutopilotWaypoint.h  AutopilotZeroLength.h
sharpeye15_ws/devel/include/seagull_commons_msgs/: CommsParameters.h  SeagullError.h  SeagullHeader.h  SeagullHeartbeat.h
sharpeye15_ws/devel/include/seagull_communication_msgs/: SeagullPayload.h
sharpeye15_ws/devel/lib/pkgconfig/: seagull_autopilot.pc  seagull_autopilot_msgs.pc  seagull_commons.pc  seagull_commons_msgs.pc  seagull_communication.pc  seagull_communication_msgs.pc  vision_pkg.pc
sharpeye15_ws/devel/lib/python2.7/dist-packages/seagull_autopilot_msgs/msg/: _AutopilotADCSamples.py  _AutopilotCommand.py  _AutopilotGimbalPayload.py  _AutopilotMissionLimits.py  _AutopilotMissionSettings.py  _AutopilotPayload.py  _AutopilotRequestWaypoints.py  _AutopilotStatus.py  _AutopilotTelemetry.py  _AutopilotTrack.py  _AutopilotUserAction.py  _AutopilotWPList.py  _AutopilotWarning.py  _AutopilotWaypoint.py  _AutopilotZeroLength.py  __init__.py
sharpeye15_ws/devel/lib/python2.7/dist-packages/seagull_commons_msgs/msg/: _CommsParameters.py  _SeagullError.py  _SeagullHeader.py  _SeagullHeartbeat.py  __init__.py
sharpeye15_ws/devel/lib/python2.7/dist-packages/seagull_communication_msgs/msg/: _SeagullPayload.py  __init__.py
sharpeye15_ws/devel/lib/seagull_autopilot/: autopilot_comms  autopilot_driver
sharpeye15_ws/devel/lib/seagull_communication/: Main  comms_relay
sharpeye15_ws/devel/lib/vision_pkg/: image_viewer_jai_node  my_publisher  my_subscriber  webcam_grabber_node
sharpeye15_ws/devel/share/seagull_autopilot/cmake/: seagull_autopilotConfig.cmake
sharpeye15_ws/devel/share/seagull_autopilot_msgs/cmake/: seagull_autopilot_msgs-msg-extras.cmake  seagull_autopilot_msgs-msg-paths.cmake  seagull_autopilot_msgsConfig.cmake
sharpeye15_ws/devel/share/seagull_commons/cmake/: seagull_commonsConfig.cmake
sharpeye15_ws/devel/share/seagull_commons_msgs/cmake/: seagull_commons_msgs-msg-extras.cmake  seagull_commons_msgs-msg-paths.cmake  seagull_commons_msgsConfig.cmake
sharpeye15_ws/devel/share/seagull_communication/cmake/: seagull_communicationConfig.cmake
sharpeye15_ws/devel/share/seagull_communication_msgs/cmake/: seagull_communication_msgs-msg-extras.cmake  seagull_communication_msgs-msg-paths.cmake  seagull_communication_msgsConfig.cmake
sharpeye15_ws/devel/share/vision_pkg/cmake/: vision_pkgConfig.cmake
sharpeye15_ws/src/seagull_autopilot/: CMakeLists.txt  Doxyfile.in  README.md  package.xml
sharpeye15_ws/src/seagull_autopilot/cmake/: Jenkins.cmake
sharpeye15_ws/src/seagull_autopilot/include/seagull_autopilot/: AutopilotComms.h  AutopilotDriver.h  TopicsAndServices.h
sharpeye15_ws/src/seagull_autopilot/launch/: gs_hil_run.launch  hil_run.launch  ob_hil_run.launch  run.launch  sil_run.launch
sharpeye15_ws/src/seagull_autopilot/scripts/: autopilot_start
sharpeye15_ws/src/seagull_autopilot/src/: autopilot_comms.cpp  autopilot_driver.cpp
sharpeye15_ws/src/seagull_autopilot/src/seagull_autopilot/: AutopilotComms.cpp  AutopilotDriver.cpp  AutopilotDriver.cpp~
sharpeye15_ws/src/seagull_autopilot/test/: seagull_autopilot.test  test_AutopilotComms.cpp  test_seagull_autopilot.cpp
sharpeye15_ws/src/seagull_autopilot_msgs/: CMakeLists.txt  package.xml
sharpeye15_ws/src/seagull_autopilot_msgs/msg/: AutopilotADCSamples.msg  AutopilotADCSamples.msg~  AutopilotCommand.msg  AutopilotMissionLimits.msg  AutopilotMissionSettings.msg  AutopilotPayload.msg  AutopilotRequestWaypoints.msg  AutopilotStatus.msg  AutopilotTelemetry.msg  AutopilotTelemetry.msg~  AutopilotTrack.msg  AutopilotUserAction.msg  AutopilotWPList.msg  AutopilotWarning.msg  AutopilotWaypoint.msg  AutopilotZeroLength.msg
sharpeye15_ws/src/seagull_commons/: CMakeLists.txt
sharpeye15_ws/src/seagull_commons/include/: SeagullCommons.h
sharpeye15_ws/src/seagull_commons/include/seagull_commons/: GeoUtils.h  HeartbeatMonitor.h  Heartbeater.h  ROSNode.h  TopicsAndServices.h
sharpeye15_ws/src/seagull_commons/src/: ROSNode.cpp
sharpeye15_ws/src/seagull_commons_msgs/: CMakeLists.txt  package.xml
sharpeye15_ws/src/seagull_commons_msgs/msg/: CommsParameters.msg  SeagullError.msg  SeagullHeader.msg  SeagullHeartbeat.msg
sharpeye15_ws/src/seagull_communication/: CMakeLists.txt
sharpeye15_ws/src/seagull_communication/include/seagull_communication/: CommsDefinitions.h  CommsRelay.h  CommsUtils.h  TopicsAndServices.h
sharpeye15_ws/src/seagull_communication/launch/: #ground.launch#  SIL_ground.launch  SIL_onboard.launch  ground.launch  groundOnlyAutopilot.launch  onboard.launch  sep.launch
sharpeye15_ws/src/seagull_communication/scripts/: launch_onboard.sh  launch_onground.sh
sharpeye15_ws/src/seagull_communication/src/: comms_relay.cpp
sharpeye15_ws/src/seagull_communication/src/seagull_communication/: CommsRelay.cpp
sharpeye15_ws/src/seagull_communication/test/: Main.cpp  test_CommsRelay.cpp  test_CommsRelayB.cpp  test_CommsRelayG.cpp
sharpeye15_ws/src/seagull_communication_msgs/: CMakeLists.txt
sharpeye15_ws/src/seagull_communication_msgs/msg/: SeagullPayload.msg
webservices/: README  build.sbt
webservices/project/: plugins.sbt~
webservices/src/main/resources/: application.conf  index.html  web
(+79 files in other folders)
